2009-01-23  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes_applet.c: Remove use of gnome_client_*. See bug
	562333.

2009-01-15  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.c: We aren't using libgnomeui anymore. Bug 567775.

==================== 2.25.3 ======================

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* util.[ch]:
	* stickynotes_applet.[ch]: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

2008-11-09  Mario Blättermann  <mariobl@svn.gnome.org>

	* docs/de/de.po: Updated German translation

2008-11-09  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.h: 
	* stickynotes.c:
	* stickynotes_applet.c:	
	* stickynotes_applet_callbacks.c: Reduce I/O by batching
	configuration saves. They now occur every minutes (if necessary)
	and at applet deletion time. See bug 458902.

2008-11-07  Mario Blättermann  <mariobl@svn.gnome.org>

	* docs/Makefile.am: Added de to DOC_LINGUAS 
	* docs/de/de.po: Added German translation
	* docs/de/figures/*: Added screenshots

2008-10-09  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.c:
	* stickynotes_applet_callbacks.c:
	* stickynotes_applet.[ch]: Patch from Josselin Mouette to hide the
	stickynotes when the applet button is pressed. See bug 505475.

2008-09-30  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am (install-data-local): Remove the use of the
	--shutdown option when installing the gconf data. Reported by Remi
	Cardona in bug 554311.

2008-09-26  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.ui: 
	* stickynotes.glade: Set the page_size to 0 to work around recent
	gtk sensitivity.

==================== 2.24.0.1 ====================

2008-08-20  Philipp Kerling  <k.philipp@gmail.com>
