@@ -1,3 +1,9 @@
+2009-01-25  Callum McKenzie  <callum@spooky-possum.org>
+
+	* stickynotes.c:
+	* stickynotes_callbacks.*: Replace gnome_popup_menu_attach. Patch
+	from Diego Escalante Urrelo (bug 562333). 
+
 2009-01-23  Callum McKenzie  <callum@spooky-possum.org>
 
 	* stickynotes_applet.c: Remove use of gnome_client_*. See bug
